name:                yfind
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2018 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evolve
                     , YFind
  other-modules:       Util.Array
  build-depends:       array
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , bitwise
                     , ca
                     , transformers
                     , util
                     , z3
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -O2

executable yfind
  hs-source-dirs:      x
  main-is:             Main.hs
  build-depends:       array
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , ca
                     , optparse-applicative
                     , util
                     , yfind
                     , z3
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -O2

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , smallcheck >=1.1.3
                     , tasty >=1.0
                     , tasty-smallcheck >=0.8
                     , yfind
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -O2

source-repository head
  type:     git
  location: https://github.com/strake/yfind
