name:                yfind
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2018 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evolve
                     , Nbhd
                     , YFind
  other-modules:       Util.Array
  build-depends:       array
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , bitwise
                     , ca
                     , ez3
                     , primitive
                     , transformers
                     , util
                     , util-primitive
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , NoMonomorphismRestriction
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

executable yfind
  hs-source-dirs:      x
  main-is:             Main.hs
  build-depends:       array
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , ca
                     , ez3
                     , optparse-applicative
                     , util
                     , yfind
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , smallcheck >=1.1.3
                     , tasty >=1.0
                     , tasty-smallcheck >=0.8
                     , yfind
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

source-repository head
  type:     git
  location: https://github.com/strake/yfind
