name:                yfind
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2018 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Atomic
                     , Evolve
                     , Nbhd
                     , Symmetry
                     , Data.Grid.Text
                     , Data.Rule
                     , Numeric.Factors
                     , YCommon
                     , Util.Array
                     , Util.Monad.Primitive.Unsafe
  build-depends:       Fin
                     , array
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , basic
                     , bitwise
                     , ca
                     , control
                     , ez3
                     , filtrable
                     , foldable1
                     , peano
                     , primitive
                     , transformers
                     , union-find
                     , universe-base
                     , universe-instances-base
                     , util
                     , util-universe
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , NoMonomorphismRestriction
                     , PartialTypeSignatures
                     , ScopedTypeVariables
                     , TypeApplications
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , ConstrainedClassMethods
                     , MonadComprehensions
                     , StandaloneDeriving
                     , GeneralizedNewtypeDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods
                       -Wno-unticked-promoted-constructors

executable yfind
  hs-source-dirs:      y/find
  main-is:             Main.hs
  other-modules:       Control.Monad.Trans.MaybeReader
                     , Search
  build-depends:       array
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , ca
                     , dual
                     , ez3
                     , filtrable
                     , foldable1
                     , optparse-applicative
                     , transformers
                     , universe-base
                     , universe-instances-base
                     , util
                     , util-universe
                     , yfind
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , NoMonomorphismRestriction
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods
  if impl(ghc)
    build-depends:     comprehensions-ghc
    ghc-options:       -fplugin=Comprehension.Plugin
    default-extensions:ApplicativeDo
  else
    default-extensions:ApplicativeComprehensions

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , smallcheck >=1.1.3
                     , tasty >=1.0
                     , tasty-smallcheck >=0.8
                     , yfind
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

source-repository head
  type:     git
  location: https://github.com/strake/yfind
